Fix QuickReply issue with white-space: nowrap;

--- a/src/scss/Chat/index.scss
+++ b/src/scss/Chat/index.scss
@@ -48,26 +48,19 @@ $color-send-button: #039be5;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2), 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 .Chat__Main {
-  padding: 20px;
-  position: relative;
   background: white;
+  flex-direction: column;
+  flex: 1 0 auto;
   height: 60vh;
+  margin-bottom: auto;
   overflow-x: hidden;
-  width: 100%;
+  padding: 1em;
+  position: relative;
   white-space: nowrap;
+  width: 100%;
 
-  @media #{$small-and-down} {
-    flex: 1 0 auto;
-    margin-bottom: auto;
-  }
   @media #{$medium-and-up} {
-    // height: 60vh;
     max-height: 500px;
-  }
-  &:after {
-    content: '';
-    display: table;
-    clear: both;
   }
 }
 .Chat__Send__Button {
